--- a/src/styles/search-engine_micro.css
+++ b/src/styles/search-engine_micro.css
@@ -1,14 +1,14 @@
-.gse-search-engine-micro {
+.gse-search-engine_micro {
   width: 5%;
   height: 100%;
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/e8/Google_mic.svg');
   background-size: 18px 25.766355140186917px;
   background-repeat: no-repeat;
   background-position: center center; }
-.gse-search-engine-micro:hover .gse-search-engine-micro-msg {
+.gse-search-engine_micro:hover .gse-search-engine_micro_msg {
   visibility: visible; }
 
-.gse-search-engine-micro-msg {
+.gse-search-engine_micro_msg {
   visibility: hidden;
   position: relative;
   padding: 5px 0;
@@ -22,19 +22,19 @@
   -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08); }
   @media screen and (min-width: 695.01px) {
-    .gse-search-engine-micro-msg {
+    .gse-search-engine_micro-msg {
       right: 46px;
       padding: 7px 9px;
       width: 100px; }
-    .gse-search-engine-micro-msg br {
+    .gse-search-engine_micro_msg br {
       display: none; } }
   @media screen and (min-width: 864.01px) {
-    .gse-search-engine-micro-msg {
+    .gse-search-engine_micro-msg {
       right: 42.5px; } }
 
 
 
-.gse-search-engine-micro-arrow {
+.gse-search-engine_micro_arrow {
   bottom: 100%;
   left: 50%;
   height: 0;
@@ -46,11 +46,11 @@
   border-bottom-color: #000;
   border-width: 6px;
   margin-left: -6px; }
-.gse-search-engine-micro-txt {
+.gse-search-engine_micro_txt {
   font-family: arial, sans-serif;
   font-size: 11px;
   letter-spacing: -.2px;
   font-weight: 700; }
   @media screen and (min-width: 695.01px) {
-    .gse-search-engine-micro-txt {
+    .gse-search-engine_micro_txt {
       font-size: 12px; } }
